# rlm-connector

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  README.en.md  README.md  config.example.yaml  docker-compose.yml  ngrok.example.yml  pyproject.toml  start.bat
.claude/: settings.local.json
deploy/windows/: README.md  _service-api.ps1  _service-mcp.ps1  _service-ngrok.ps1  install-api-service.bat  install-as-windows-service.bat  run-api-server.bat  run-mcp-server-public.bat  run-mcp-server.bat
examples/: n8n-discord-chatbot-workflow.json
packaging/: rlm-backend.spec  rlm_backend.py
src/: __init__.py  config.py  main.py  mcp_http_server.py  mcp_server.py
src/api/: __init__.py  app.py  routes.py
src/connectors/: __init__.py  base.py  local.py
src/database/: __init__.py  models.py  repository.py
src/indexer/: __init__.py  indexer.py  llm_client.py  parser.py  summarizer.py  sync.py
src/rlm_engine/: __init__.py  engine.py
src/ui/: __init__.py  chat.py
tests/: __init__.py
